--- a/CHOLMOD/Tcov/Makefile
+++ b/CHOLMOD/Tcov/Makefile
@@ -37,9 +37,9 @@ C = $(CC) $(CF) $(CHOLMOD_CONFIG) $(NANTESTS)
 # LDLIBS = $(METIS) -lm -llapack_plain -lblas_plain -lgfortran -lgfortranbegin
 # LDLIBS = $(METIS) -lm -llapack -lblas -lgfortran -lgfortranbegin
 # Linux:
-# LDLIBS = $(METIS) -lm -llapack_plain -lblas_plain -lgfortran -lgfortranbegin -lpthread -lrt
+# LDLIBS = $(METIS) -lm -llapack_plain -lblas_plain -lgfortran -lgfortranbegin -lrt
 # Mac:
-# LDLIBS = $(METIS) -lm -llapack -lblas -lgfortran -lgfortranbegin -lpthread
+# LDLIBS = $(METIS) -lm -llapack -lblas -lgfortran -lgfortranbegin
 
 # Solaris
 # LDLIBS = $(METIS) -xlic_lib=sunperf
