*.ci *.decl.h *.def.h

--- a/CHOLMOD/Demo/Makefile
+++ b/CHOLMOD/Demo/Makefile
@@ -77,8 +77,11 @@ cholmod_simple: cholmod_simple.c
 cholmod_l_demo: cholmod_l_demo.c cholmod_demo.h
 	$(C) -o cholmod_l_demo $(I) cholmod_l_demo.c $(LIB2)
 
-cholmod_l_batched_demo: cholmod_l_batched_demo.c cholmod_demo.h
+cholmod_l_batched_demo: cholmod_l_batched_demo.c cholmod_l_batched_demo.decl.h cholmod_demo.h
 	$(CHARM) -language charm++ -o cholmod_l_batched_demo $(I) -c cholmod_l_batched_demo.c $(LIB2)
+
+cholmod_l_batched_demo.decl.h:
+	$(CHARM) cholmod_l_batched_demo.ci
 
 readhb: readhb.f
 	$(F77) $(FFLAGS) -o readhb readhb.f
