--- a/CSparse/Tcov/Makefile
+++ b/CSparse/Tcov/Makefile
@@ -6,7 +6,7 @@ V =
 CC = gcc
 CFLAGS = -O -g -fprofile-arcs -ftest-coverage \
     	-Wall -W -Wshadow -Wmissing-prototypes -Wstrict-prototypes \
-    	-Wredundant-decls -Wnested-externs -Wdisabled-optimization -ansi \
+    	-Wredundant-decls -Wnested-externs -Wdisabled-optimization \
 	-Wno-unused-parameter -I../Include -I../Demo
 
 run: all run1 runbook run3 runtest
