--- a/CHOLMOD/Demo/Makefile
+++ b/CHOLMOD/Demo/Makefile
@@ -31,17 +31,17 @@ charm: cholmod_l_charm_batched_gpu_demo cholmod_l_charm_batched_matrix_demo
 fortran: readhb readhb2 reade 
 
 all: code charm
-	./cholmod_demo < Matrix/bcsstk01.tri
-	./cholmod_l_demo < Matrix/bcsstk01.tri
-	./cholmod_demo < Matrix/lp_afiro.tri
-	./cholmod_l_demo < Matrix/lp_afiro.tri
-	./cholmod_demo < Matrix/can___24.mtx
-	./cholmod_l_demo < Matrix/can___24.mtx
-	./cholmod_demo < Matrix/c.tri
-	./cholmod_l_demo < Matrix/c.tri
-	./cholmod_simple < Matrix/c.tri
-	./cholmod_simple < Matrix/can___24.mtx
-	./cholmod_simple < Matrix/bcsstk01.tri
+	#./cholmod_demo < Matrix/bcsstk01.tri
+	#./cholmod_l_demo < Matrix/bcsstk01.tri
+	#./cholmod_demo < Matrix/lp_afiro.tri
+	#./cholmod_l_demo < Matrix/lp_afiro.tri
+	#./cholmod_demo < Matrix/can___24.mtx
+	#./cholmod_l_demo < Matrix/can___24.mtx
+	#./cholmod_demo < Matrix/c.tri
+	#./cholmod_l_demo < Matrix/c.tri
+	#./cholmod_simple < Matrix/c.tri
+	#./cholmod_simple < Matrix/can___24.mtx
+	#./cholmod_simple < Matrix/bcsstk01.tri
 
 # run on a big matrix.  This exercises the GPU, if compiled to exploit it
 big: code
