--- a/CHOLMOD/Demo/Makefile
+++ b/CHOLMOD/Demo/Makefile
@@ -23,7 +23,7 @@ endif
 
 C = $(CC) $(CF) $(CHOLMOD_CONFIG) $(CONFIG_PARTITION)
 
-code: library cholmod_demo cholmod_l_demo cholmod_simple
+code: library cholmod_demo cholmod_l_demo cholmod_simple cholmod_l_batched_demo
 
 fortran: readhb readhb2 reade 
 
@@ -48,6 +48,7 @@ distclean: purge
 
 purge: clean
 	- $(RM) cholmod_demo cholmod_l_demo readhb readhb2 reade
+	- $(RM) cholmod_demo cholmod_l_batched_demo
 	- $(RM) cholmod_simple
 	- $(RM) timelog.m
 	- $(RM) -r $(PURGE)
@@ -84,6 +85,9 @@ cholmod_simple: cholmod_simple.c
 
 cholmod_l_demo: cholmod_l_demo.c cholmod_demo.h
 	$(C) -o cholmod_l_demo $(I) cholmod_l_demo.c $(LIB2)
+
+cholmod_l_batched_demo: cholmod_l_batched_demo.c cholmod_demo.h
+	$(C) -o cholmod_l_batched_demo $(I) cholmod_l_batched_demo.c $(LIB2)
 
 readhb: readhb.f
 	$(F77) $(FFLAGS) -o readhb readhb.f
